--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,21 @@
+@font-face {
+  font-family: "gilroy-bold";
+  src: url("fonts/webfontkit/gilroy-bold-webfont.woff2") format("woff2"), url("fonts/webfontkit/gilroy-bold-webfont.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: "gilroy-regular";
+  src: url("fonts/webfontkit/gilroy-regular-webfont.woff2") format("woff2"), url("fonts/webfontkit/gilroy-regular-webfont.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
 body {
   margin: 0;
   padding: 0;
-  font-family: Gilroy-Regular;
+  font-family: gilroy-regular, sans-serif;
   color: white;
+  text-align: center;
 }
 
 p {
@@ -12,6 +25,7 @@ p {
 
 h2 {
   font-size: 60px;
+  margin: 0;
 }
 
 #landing {
@@ -24,7 +38,7 @@ h2 {
   background-size: cover;
 }
 #landing h1 {
-  font-family: Gilroy-Bold;
+  font-family: gilroy-bold, sans-serif;
   font-size: 300px;
   margin: 0;
   line-height: 300px;
@@ -46,6 +60,7 @@ h2 {
   display: grid;
   place-items: center;
   background-color: #060039;
+  text-align: left;
 }
 #about .about-pages p {
   width: 90%;
@@ -61,6 +76,7 @@ h2 {
   display: grid;
   place-items: center;
   background-color: #DA774A;
+  margin: 0 !important;
 }
 #skills .skills-pages {
   width: 50%;
@@ -87,6 +103,7 @@ h2 {
   display: grid;
   place-items: center;
   background-color: #7A4865;
+  margin: 0 !important;
 }
 #languages .languages-pages {
   width: 50%;
@@ -119,27 +136,33 @@ h2 {
   display: grid;
   place-items: center;
   background-color: #2E39A9;
+  margin: 0 !important;
 }
 #projects .projects-pages {
   width: 50%;
   color: black;
 }
-#projects .projects-pages .card {
-  border-radius: 10px;
-  box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.1);
-}
-#projects .projects-pages div {
+#projects .projects-pages .wrapper {
   height: 100vh;
   display: grid;
-  grid-template-rows: 1fr 50px 50px;
+  grid-template-rows: 1fr 50px 70px;
+  grid-template-areas: "image" "title" "desc";
   place-items: center;
   border-bottom: 1px solid black;
 }
-#projects .projects-pages div h3 {
+#projects .projects-pages .wrapper .image {
+  grid-area: image;
+}
+#projects .projects-pages .wrapper .image img {
+  width: 100%;
+}
+#projects .projects-pages .wrapper h3 {
+  grid-area: title;
   font-size: 40px;
   margin: 0;
 }
-#projects .projects-pages div p {
+#projects .projects-pages .wrapper p {
+  grid-area: desc;
   font-size: 25px;
   margin: 0;
   text-align: center;
@@ -154,11 +177,166 @@ h2 {
   background-color: #463C74;
   display: grid;
   place-items: center;
+  margin: 0 !important;
 }
 #contact .contact-pages {
   height: 100vh;
   width: 50%;
-  background-color: #BA1ED6;
+  background-color: #26282B;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+#contact .contact-pages a {
+  text-decoration: none;
+}
+#contact .contact-pages .social-button {
+  height: 90px;
+  width: 90px;
+  border-radius: 50%;
+  background: #26282B;
+  box-shadow: 5px 5px 10px #0f1011, -5px -5px 10px #3d4045;
+  transition: all 0.5s ease;
+  display: grid;
+  place-items: center;
+  font-size: 40px;
+  color: white;
+}
+#contact .contact-pages .social-button:hover {
+  background: linear-gradient(145deg, #1a1b1d, #292b2e);
+}
+
+@media (max-height: 825px) {
+  #projects .projects-pages .wrapper .image img {
+    height: 70vh;
+    width: auto;
+  }
+}
+@media (max-width: 1366px) {
+  #landing h1 {
+    font-size: 8rem;
+    line-height: 8rem;
+  }
+  #landing p {
+    font-size: 1.7rem;
+  }
+
+  h2 {
+    font-size: 1.5rem;
+  }
+
+  p {
+    font-size: 1.5rem;
+  }
+
+  #about {
+    height: 100%;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 0.1fr 1fr;
+  }
+  #about .about-title {
+    height: 10vh;
+  }
+  #about .about-pages {
+    height: 90vh;
+  }
+
+  #skills {
+    height: 100%;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 10vh 45vh 45vh;
+  }
+  #skills .skills-pages {
+    width: 100%;
+  }
+  #skills .skills-pages div {
+    height: 45vh;
+  }
+  #skills .skills-title {
+    width: 100%;
+    height: 10vh;
+  }
+
+  #languages {
+    height: 100%;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 10vh 45vh 45vh 45vh 45vh;
+  }
+  #languages .languages-title {
+    width: 100%;
+    height: 10vh;
+  }
+  #languages .languages-pages {
+    width: 100%;
+  }
+  #languages .languages-pages div {
+    height: 45vh;
+  }
+
+  #projects {
+    height: 100%;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 10vh repeat(7, 45vh);
+    margin-bottom: 90px;
+  }
+  #projects .projects-title {
+    width: 100%;
+    height: 10vh;
+  }
+  #projects .projects-pages {
+    width: 100%;
+    border: none;
+  }
+  #projects .projects-pages .wrapper {
+    height: 45vh;
+    margin: 10px auto;
+    border: none;
+    border-radius: 10px;
+    box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.1);
+    width: 90%;
+  }
+  #projects .projects-pages .wrapper h3 {
+    font-size: 1.5rem;
+  }
+  #projects .projects-pages .wrapper p {
+    font-size: 1rem;
+  }
+  #projects .projects-pages .wrapper .image img {
+    height: 23vh;
+    width: auto;
+  }
+
+  #contact {
+    height: 100%;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 0.1fr 1fr;
+  }
+  #contact .contact-title {
+    width: 100%;
+    height: 10vh;
+  }
+  #contact .contact-title h2 {
+    font-size: 2rem;
+  }
+  #contact .contact-pages {
+    width: 100%;
+    height: 90vh;
+    display: grid;
+    grid-template-rows: repeat(5, 1fr);
+  }
+  #contact .contact-pages p {
+    font-size: 1.5rem;
+  }
+  #contact .contact-pages .social-button {
+    height: 70px;
+    width: 70px;
+    font-size: 30px;
+  }
 }
 
 /*# sourceMappingURL=main.css.map */
