--- a/css/main.css
+++ b/css/main.css
@@ -1,32 +1,29 @@
 @font-face {
-  font-family: "gilroy-bold";
+  font-family: 'gilroy-bold';
   src: url("fonts/webfontkit/gilroy-bold-webfont.woff2") format("woff2"), url("fonts/webfontkit/gilroy-bold-webfont.woff") format("woff");
   font-weight: normal;
-  font-style: normal;
-}
+  font-style: normal; }
+
 @font-face {
-  font-family: "gilroy-regular";
+  font-family: 'gilroy-regular';
   src: url("fonts/webfontkit/gilroy-regular-webfont.woff2") format("woff2"), url("fonts/webfontkit/gilroy-regular-webfont.woff") format("woff");
   font-weight: normal;
-  font-style: normal;
-}
+  font-style: normal; }
+
 body {
   margin: 0;
   padding: 0;
   font-family: gilroy-regular, sans-serif;
   color: white;
-  text-align: center;
-}
+  text-align: center; }
 
 p {
   font-size: 40px;
-  margin: 0;
-}
+  margin: 0; }
 
 h2 {
   font-size: 60px;
-  margin: 0;
-}
+  margin: 0; }
 
 #landing {
   height: 100vh;
@@ -35,308 +32,253 @@ h2 {
   display: grid;
   place-items: center;
   background-image: url("../images/pattern.svg");
-  background-size: cover;
-}
-#landing h1 {
-  font-family: gilroy-bold, sans-serif;
-  font-size: 300px;
-  margin: 0;
-  line-height: 300px;
-}
+  background-size: cover; }
+  #landing svg {
+    margin-top: -10%;
+    margin-bottom: -20%; }
+  #landing svg text {
+    font-family: gilroy-bold, sans-serif;
+    font-size: 300px;
+    margin: 0;
+    stroke: white;
+    stroke-width: 5;
+    animation: textAnimation 1s linear, fillText 1s ease forwards 1s; }
+
+@keyframes textAnimation {
+  from {
+    stroke-dasharray: 0 50%; }
+  to {
+    stroke-dasharray: 50% 0; } }
+
+@keyframes fillText {
+  from {
+    fill: transparent; }
+  to {
+    fill: white; } }
 
 #about {
   height: 100vh;
   display: grid;
-  grid-template-columns: 1fr 1fr;
-}
-#about .about-title {
-  height: 100vh;
-  display: grid;
-  place-items: center;
-  background-color: #4484AB;
-}
-#about .about-pages {
-  height: 100vh;
-  display: grid;
-  place-items: center;
-  background-color: #060039;
-  text-align: left;
-}
-#about .about-pages p {
-  width: 90%;
-}
+  grid-template-columns: 1fr 1fr; }
+  #about .about-title {
+    height: 100vh;
+    display: grid;
+    place-items: center;
+    background-color: #4484AB; }
+  #about .about-pages {
+    height: 100vh;
+    display: grid;
+    place-items: center;
+    background-color: #060039;
+    text-align: left; }
+    #about .about-pages p {
+      width: 90%; }
 
 #skills {
   height: 200vh;
-  display: flex;
-}
-#skills .skills-title {
-  width: 50%;
-  height: 100vh;
-  display: grid;
-  place-items: center;
-  background-color: #DA774A;
-  margin: 0 !important;
-}
-#skills .skills-pages {
-  width: 50%;
-}
-#skills .skills-pages div {
-  height: 100vh;
-  display: grid;
-  place-items: center;
-}
-#skills .skills-pages div:nth-child(1) {
-  background-color: #E53855;
-}
-#skills .skills-pages div:nth-child(2) {
-  background-color: #7252A4;
-}
+  display: flex; }
+  #skills .skills-title {
+    width: 50%;
+    height: 100vh;
+    display: grid;
+    place-items: center;
+    background-color: #DA774A;
+    margin: 0 !important; }
+  #skills .skills-pages {
+    width: 50%; }
+    #skills .skills-pages div {
+      height: 100vh;
+      display: grid;
+      place-items: center; }
+      #skills .skills-pages div:nth-child(1) {
+        background-color: #E53855; }
+      #skills .skills-pages div:nth-child(2) {
+        background-color: #7252A4; }
 
 #languages {
   height: 400vh;
-  display: flex;
-}
-#languages .languages-title {
-  width: 50%;
-  height: 100vh;
-  display: grid;
-  place-items: center;
-  background-color: #7A4865;
-  margin: 0 !important;
-}
-#languages .languages-pages {
-  width: 50%;
-}
-#languages .languages-pages div {
-  height: 100vh;
-  display: grid;
-  place-items: center;
-}
-#languages .languages-pages div:nth-child(1) {
-  background-color: #FE5E33;
-}
-#languages .languages-pages div:nth-child(2) {
-  background-color: #137D9F;
-}
-#languages .languages-pages div:nth-child(3) {
-  background-color: #849C9B;
-}
-#languages .languages-pages div:nth-child(4) {
-  background-color: #60BEBF;
-}
+  display: flex; }
+  #languages .languages-title {
+    width: 50%;
+    height: 100vh;
+    display: grid;
+    place-items: center;
+    background-color: #7A4865;
+    margin: 0 !important; }
+  #languages .languages-pages {
+    width: 50%; }
+    #languages .languages-pages div {
+      height: 100vh;
+      display: grid;
+      place-items: center; }
+      #languages .languages-pages div:nth-child(1) {
+        background-color: #FE5E33; }
+      #languages .languages-pages div:nth-child(2) {
+        background-color: #137D9F; }
+      #languages .languages-pages div:nth-child(3) {
+        background-color: #849C9B; }
+      #languages .languages-pages div:nth-child(4) {
+        background-color: #60BEBF; }
 
 #projects {
   height: 700vh;
-  display: flex;
-}
-#projects .projects-title {
-  height: 100vh;
-  width: 50%;
-  display: grid;
-  place-items: center;
-  background-color: #2E39A9;
-  margin: 0 !important;
-}
-#projects .projects-pages {
-  width: 50%;
-  color: black;
-}
-#projects .projects-pages .wrapper {
-  height: 100vh;
-  display: grid;
-  grid-template-rows: 1fr 50px 70px;
-  grid-template-areas: "image" "title" "desc";
-  place-items: center;
-  border-bottom: 1px solid black;
-}
-#projects .projects-pages .wrapper .image {
-  grid-area: image;
-}
-#projects .projects-pages .wrapper .image img {
-  width: 100%;
-}
-#projects .projects-pages .wrapper h3 {
-  grid-area: title;
-  font-size: 40px;
-  margin: 0;
-}
-#projects .projects-pages .wrapper p {
-  grid-area: desc;
-  font-size: 25px;
-  margin: 0;
-  text-align: center;
-}
+  display: flex; }
+  #projects .projects-title {
+    height: 100vh;
+    width: 50%;
+    display: grid;
+    place-items: center;
+    background-color: #2E39A9;
+    margin: 0 !important; }
+  #projects .projects-pages {
+    width: 50%;
+    color: black; }
+    #projects .projects-pages .wrapper {
+      height: 100vh;
+      display: grid;
+      grid-template-rows: 1fr 50px 70px;
+      grid-template-areas: "image" "title" "desc";
+      place-items: center;
+      border-bottom: 1px solid black; }
+      #projects .projects-pages .wrapper .image {
+        grid-area: image; }
+        #projects .projects-pages .wrapper .image img {
+          width: 100%; }
+      #projects .projects-pages .wrapper h3 {
+        grid-area: title;
+        font-size: 40px;
+        margin: 0; }
+      #projects .projects-pages .wrapper p {
+        grid-area: desc;
+        font-size: 25px;
+        margin: 0;
+        text-align: center; }
+
 #contact {
   height: 100vh;
-  display: flex;
-}
-#contact .contact-title {
-  height: 100vh;
-  width: 50%;
-  background-color: #463C74;
-  display: grid;
-  place-items: center;
-  margin: 0 !important;
-}
-#contact .contact-pages {
-  height: 100vh;
-  width: 50%;
-  background-color: #26282B;
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-}
-#contact .contact-pages a {
-  text-decoration: none;
-}
-#contact .contact-pages .social-button {
-  height: 90px;
-  width: 90px;
-  border-radius: 50%;
-  background: #26282B;
-  box-shadow: 5px 5px 10px #0f1011, -5px -5px 10px #3d4045;
-  transition: all 0.5s ease;
-  display: grid;
-  place-items: center;
-  font-size: 40px;
-  color: white;
-}
-#contact .contact-pages .social-button:hover {
-  background: linear-gradient(145deg, #1a1b1d, #292b2e);
-}
+  display: flex; }
+  #contact .contact-title {
+    height: 100vh;
+    width: 50%;
+    background-color: #463C74;
+    display: grid;
+    place-items: center;
+    margin: 0 !important; }
+  #contact .contact-pages {
+    height: 100vh;
+    width: 50%;
+    background-color: #26282B;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center; }
+    #contact .contact-pages a {
+      text-decoration: none; }
+    #contact .contact-pages .social-button {
+      height: 90px;
+      width: 90px;
+      border-radius: 50%;
+      background: #26282B;
+      box-shadow: 5px 5px 10px #0f1011, -5px -5px 10px #3d4045;
+      transition: all 0.5s ease;
+      display: grid;
+      place-items: center;
+      font-size: 40px;
+      color: white; }
+      #contact .contact-pages .social-button:hover {
+        background: linear-gradient(145deg, #1a1b1d, #292b2e); }
 
 @media (max-height: 825px) {
   #projects .projects-pages .wrapper .image img {
     height: 70vh;
-    width: auto;
-  }
-}
+    width: auto; } }
+
 @media (max-width: 1366px) {
   #landing h1 {
     font-size: 8rem;
-    line-height: 8rem;
-  }
+    line-height: 8rem; }
   #landing p {
-    font-size: 1.7rem;
-  }
-
+    font-size: 1.7rem; }
   h2 {
-    font-size: 1.5rem;
-  }
-
+    font-size: 1.5rem; }
   p {
-    font-size: 1.5rem;
-  }
-
+    font-size: 1.5rem; }
   #about {
     height: 100%;
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 0.1fr 1fr;
-  }
-  #about .about-title {
-    height: 10vh;
-  }
-  #about .about-pages {
-    height: 90vh;
-  }
-
+    grid-template-rows: 0.1fr 1fr; }
+    #about .about-title {
+      height: 10vh; }
+    #about .about-pages {
+      height: 90vh; }
   #skills {
     height: 100%;
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 10vh 45vh 45vh;
-  }
-  #skills .skills-pages {
-    width: 100%;
-  }
-  #skills .skills-pages div {
-    height: 45vh;
-  }
-  #skills .skills-title {
-    width: 100%;
-    height: 10vh;
-  }
-
+    grid-template-rows: 10vh 45vh 45vh; }
+    #skills .skills-pages {
+      width: 100%; }
+      #skills .skills-pages div {
+        height: 45vh; }
+    #skills .skills-title {
+      width: 100%;
+      height: 10vh; }
   #languages {
     height: 100%;
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 10vh 45vh 45vh 45vh 45vh;
-  }
-  #languages .languages-title {
-    width: 100%;
-    height: 10vh;
-  }
-  #languages .languages-pages {
-    width: 100%;
-  }
-  #languages .languages-pages div {
-    height: 45vh;
-  }
-
+    grid-template-rows: 10vh 45vh 45vh 45vh 45vh; }
+    #languages .languages-title {
+      width: 100%;
+      height: 10vh; }
+    #languages .languages-pages {
+      width: 100%; }
+      #languages .languages-pages div {
+        height: 45vh; }
   #projects {
     height: 100%;
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 10vh repeat(7, 45vh);
-    margin-bottom: 90px;
-  }
-  #projects .projects-title {
-    width: 100%;
-    height: 10vh;
-  }
-  #projects .projects-pages {
-    width: 100%;
-    border: none;
-  }
-  #projects .projects-pages .wrapper {
-    height: 45vh;
-    margin: 10px auto;
-    border: none;
-    border-radius: 10px;
-    box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.1);
-    width: 90%;
-  }
-  #projects .projects-pages .wrapper h3 {
-    font-size: 1.5rem;
-  }
-  #projects .projects-pages .wrapper p {
-    font-size: 1rem;
-  }
-  #projects .projects-pages .wrapper .image img {
-    height: 23vh;
-    width: auto;
-  }
-
+    margin-bottom: 90px; }
+    #projects .projects-title {
+      width: 100%;
+      height: 10vh; }
+    #projects .projects-pages {
+      width: 100%;
+      border: none; }
+      #projects .projects-pages .wrapper {
+        height: 45vh;
+        margin: 10px auto;
+        border: none;
+        border-radius: 10px;
+        box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.1);
+        width: 90%; }
+        #projects .projects-pages .wrapper h3 {
+          font-size: 1.5rem; }
+        #projects .projects-pages .wrapper p {
+          font-size: 1rem; }
+        #projects .projects-pages .wrapper .image img {
+          height: 23vh;
+          width: auto; }
   #contact {
     height: 100%;
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 0.1fr 1fr;
-  }
-  #contact .contact-title {
-    width: 100%;
-    height: 10vh;
-  }
-  #contact .contact-title h2 {
-    font-size: 2rem;
-  }
-  #contact .contact-pages {
-    width: 100%;
-    height: 90vh;
-    display: grid;
-    grid-template-rows: repeat(5, 1fr);
-  }
-  #contact .contact-pages p {
-    font-size: 1.5rem;
-  }
-  #contact .contact-pages .social-button {
-    height: 70px;
-    width: 70px;
-    font-size: 30px;
-  }
-}
-
-/*# sourceMappingURL=main.css.map */
+    grid-template-rows: 0.1fr 1fr; }
+    #contact .contact-title {
+      width: 100%;
+      height: 10vh; }
+      #contact .contact-title h2 {
+        font-size: 2rem; }
+    #contact .contact-pages {
+      width: 100%;
+      height: 90vh;
+      display: grid;
+      grid-template-rows: repeat(5, 1fr); }
+      #contact .contact-pages p {
+        font-size: 1.5rem; }
+      #contact .contact-pages .social-button {
+        height: 70px;
+        width: 70px;
+        font-size: 30px; } }
