--- a/css/main.scss
+++ b/css/main.scss
@@ -1,22 +1,17 @@
 @font-face {
-  font-family: 'gilroy-bold';
-  src: url('fonts/webfontkit/gilroy-bold-webfont.woff2') format('woff2'),
-  url('fonts/webfontkit/gilroy-bold-webfont.woff') format('woff');
+  font-family: "gilroy-bold";
+  src: url("fonts/webfontkit/gilroy-bold-webfont.woff2") format("woff2"),
+    url("fonts/webfontkit/gilroy-bold-webfont.woff") format("woff");
   font-weight: normal;
   font-style: normal;
-
 }
 
-
-
-
 @font-face {
-  font-family: 'gilroy-regular';
-  src: url('fonts/webfontkit/gilroy-regular-webfont.woff2') format('woff2'),
-  url('fonts/webfontkit/gilroy-regular-webfont.woff') format('woff');
+  font-family: "gilroy-regular";
+  src: url("fonts/webfontkit/gilroy-regular-webfont.woff2") format("woff2"),
+    url("fonts/webfontkit/gilroy-regular-webfont.woff") format("woff");
   font-weight: normal;
   font-style: normal;
-
 }
 
 html {
@@ -27,7 +22,7 @@ html {
   }
 }
 
-body{
+body {
   margin: 0;
   padding: 0;
   font-family: gilroy-regular, sans-serif;
@@ -35,17 +30,23 @@ body{
   text-align: center;
 }
 
-p{
+.sticky {
+  position: sticky;
+  position: -webkit-sticky;
+  top: 0;
+}
+
+p {
   font-size: 4rem;
   margin: 0;
 }
 
-h2{
+h2 {
   font-size: 6rem;
   margin: 0;
 }
 
-#landing{
+#landing {
   height: 100vh;
   background-color: #060039;
   text-align: center;
@@ -59,7 +60,7 @@ h2{
     margin-bottom: -20%;
   }
 
-  svg text{
+  svg text {
     font-family: gilroy-bold, sans-serif;
     font-size: 30rem;
     margin: 0;
@@ -90,144 +91,141 @@ h2{
   }
 }
 
-#about{
+#about {
   height: 100vh;
   display: grid;
   grid-template-columns: 1fr 1fr;
 
-  .about-title{
+  .about-title {
     height: 100vh;
     display: grid;
     place-items: center;
-    background-color: #4484AB;
-
-
+    background-color: #4484ab;
   }
 
-  .about-pages{
+  .about-pages {
     height: 100vh;
     display: grid;
     place-items: center;
     background-color: #060039;
     text-align: left;
 
-    p{
+    p {
       width: 90%;
     }
   }
 }
 
-#skills{
+#skills {
   height: 200vh;
   display: flex;
 
-  @media (max-aspect-ratio: 10/7){
+  @media (max-aspect-ratio: 10/7) {
     height: 100vh;
   }
 
-  .skills-title{
+  .skills-title {
     width: 50%;
     height: 100vh;
     display: grid;
     place-items: center;
-    background-color: #DA774A;
-    margin: 0!important;
+    background-color: #da774a;
+    margin: 0 !important;
   }
 
-  .skills-pages{
+  .skills-pages {
     width: 50%;
 
-    div{
+    div {
       height: 100vh;
       display: grid;
       place-items: center;
 
-      @media (max-aspect-ratio: 10/7){
+      @media (max-aspect-ratio: 10/7) {
         height: 50vh;
       }
 
-      &:nth-child(1){
-        background-color: #E53855;
+      &:nth-child(1) {
+        background-color: #e53855;
       }
 
-      &:nth-child(2){
-        background-color: #7252A4;
+      &:nth-child(2) {
+        background-color: #7252a4;
       }
     }
   }
 }
 
-#languages{
+#languages {
   height: 400vh;
   display: flex;
 
-  @media (max-aspect-ratio: 10/7){
+  @media (max-aspect-ratio: 10/7) {
     height: 200vh;
   }
 
-  .languages-title{
+  .languages-title {
     width: 50%;
     height: 100vh;
     display: grid;
     place-items: center;
-    background-color: #7A4865;
-    margin: 0!important;
+    background-color: #7a4865;
+    margin: 0 !important;
   }
 
-  .languages-pages{
+  .languages-pages {
     width: 50%;
 
-    div{
+    div {
       height: 100vh;
       display: grid;
       place-items: center;
 
-      @media (max-aspect-ratio: 10/7){
+      @media (max-aspect-ratio: 10/7) {
         height: 50vh;
       }
 
-      &:nth-child(1){
-        background-color: #FE5E33;
+      &:nth-child(1) {
+        background-color: #fe5e33;
       }
 
-      &:nth-child(2){
-        background-color: #137D9F;
+      &:nth-child(2) {
+        background-color: #137d9f;
       }
 
-      &:nth-child(3){
-        background-color: #849C9B;
+      &:nth-child(3) {
+        background-color: #849c9b;
       }
 
-      &:nth-child(4){
-        background-color: #60BEBF;
+      &:nth-child(4) {
+        background-color: #60bebf;
       }
     }
   }
 }
 
-#projects{
+#projects {
   height: 800vh;
   display: flex;
 
-  @media (max-aspect-ratio: 10/7){
+  @media (max-aspect-ratio: 10/7) {
     height: 350vh;
   }
 
-  .projects-title{
+  .projects-title {
     height: 100vh;
     width: 50%;
     display: grid;
     place-items: center;
-    background-color: #2E39A9;
-    margin: 0!important;
+    background-color: #2e39a9;
+    margin: 0 !important;
   }
 
-  .projects-pages{
+  .projects-pages {
     width: 50%;
     color: black;
 
-
-    .wrapper{
+    .wrapper {
       height: 100vh;
       display: grid;
       grid-template-rows: 1fr 50px max-content;
@@ -237,22 +235,21 @@ h2{
       //padding: 0 30px;
       overflow: hidden;
 
-      @media (max-aspect-ratio: 10/7){
+      @media (max-aspect-ratio: 10/7) {
         height: 50vh;
       }
 
       &:nth-child(1) {
-        background-color: #9FA3AE;
+        background-color: #9fa3ae;
       }
 
       &:nth-child(2) {
-        background-color: #BCC9B9;
+        background-color: #bcc9b9;
       }
 
       &:nth-child(3) {
         background-color: #272734;
         color: white;
-
 
         img {
           height: 70rem;
@@ -261,7 +258,7 @@ h2{
       }
 
       &:nth-child(4) {
-        background-color: #89B2BB;
+        background-color: #89b2bb;
       }
 
       &:nth-child(5) {
@@ -269,42 +266,42 @@ h2{
       }
 
       &:nth-child(6) {
-        background-color: #CDD4DD;
+        background-color: #cdd4dd;
       }
 
       &:nth-child(7) {
-        background-color: #D4D4D4;
+        background-color: #d4d4d4;
       }
 
       &:nth-child(8) {
-        background-color: #E8E4F3;
+        background-color: #e8e4f3;
       }
 
-        .image{
-          height: 100%;
-          width: 100%;
-          grid-area: image;
-          display: grid;
-          place-items: center;
+      .image {
+        height: 100%;
+        width: 100%;
+        grid-area: image;
+        display: grid;
+        place-items: center;
 
-          img{
-            width: 50vw;
-            height: auto;
-            transition: transform 1s;
+        img {
+          width: 50vw;
+          height: auto;
+          transition: transform 1s;
 
-            &:hover {
-              transform: scale(1.1);
-            }
+          &:hover {
+            transform: scale(1.1);
           }
         }
+      }
 
-      h3{
+      h3 {
         grid-area: title;
         font-size: 4rem;
         margin: 0;
       }
 
-      p{
+      p {
         grid-area: desc;
         font-size: 2.5rem;
         padding: 0 15px;
@@ -313,43 +310,42 @@ h2{
         text-align: center;
       }
 
-      &:nth-child(1){
-
+      &:nth-child(1) {
       }
     }
   }
 }
 
-#contact{
+#contact {
   height: 100vh;
   display: flex;
 
-  .contact-title{
+  .contact-title {
     height: 100vh;
     width: 50%;
-    background-color: #463C74;
+    background-color: #463c74;
     display: grid;
     place-items: center;
-    margin: 0!important;
+    margin: 0 !important;
   }
 
-  .contact-pages{
+  .contact-pages {
     height: 100vh;
     width: 50%;
-    background-color: #26282B;
+    background-color: #26282b;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
 
-    a{
+    a {
       text-decoration: none;
     }
 
-    .social-button{
+    .social-button {
       height: 90px;
       width: 90px;
       border-radius: 50%;
-      background: #26282B;
+      background: #26282b;
       box-shadow: 5px 5px 10px #0f1011, -5px -5px 10px #3d4045;
       transition: all 0.5s ease;
       display: grid;
@@ -357,9 +353,8 @@ h2{
       font-size: 40px;
       color: white;
 
-
-      &:hover{
-        background: linear-gradient(145deg, #1a1b1d, #292b2e);;
+      &:hover {
+        background: linear-gradient(145deg, #1a1b1d, #292b2e);
       }
     }
   }
@@ -390,106 +385,100 @@ h2{
 //
 //}
 
-
-
 @media (max-width: 960px) {
-
-  #landing{
-    h1{
+  #landing {
+    h1 {
       font-size: 10rem;
       line-height: 8rem;
     }
 
-    p{
+    p {
       font-size: 2.5rem;
     }
   }
 
-  h2{
+  h2 {
     font-size: 3rem;
   }
 
-  p{
+  p {
     font-size: 2.5rem;
   }
 
- #about{
-   height: 100%;
-   display: grid;
-   grid-template-columns: 1fr;
-   grid-template-rows: 0.1fr 1fr;
+  #about {
+    height: 100%;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 0.1fr 1fr;
 
-   .about-title{
-     //width: 100%;
-     height: 10vh;
+    .about-title {
+      //width: 100%;
+      height: 10vh;
+    }
 
-   }
+    .about-pages {
+      //width: 100%;
+      height: 90vh;
+    }
+  }
 
-   .about-pages{
-     //width: 100%;
-     height: 90vh;
-
-
-   }
- }
-
-  #skills{
+  #skills {
     height: 100%;
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 10vh 45vh 45vh;
 
-    .skills-pages{
+    .skills-pages {
       width: 100%;
 
-      div{
+      div {
         height: 45vh;
       }
     }
 
-    .skills-title{
+    .skills-title {
       width: 100%;
       height: 10vh;
     }
   }
 
-  #languages{
+  #languages {
     height: 100%;
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 10vh 45vh 45vh 45vh 45vh;
 
-    .languages-title{
+    .languages-title {
       width: 100%;
       height: 10vh;
     }
 
-    .languages-pages{
+    .languages-pages {
       width: 100%;
 
-      div{
+      div {
         height: 45vh;
       }
     }
   }
 
-  #projects{
+  #projects {
     height: 100%;
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 10vh repeat(8, 45vh);
     margin-bottom: 90px;
 
-    .projects-title{
+    .projects-title {
       width: 100%;
       height: 10vh;
     }
 
-    .projects-pages{
+    .projects-pages {
       width: 100%;
       border: none;
 
-      .wrapper{
+      .wrapper {
         height: 45vh;
         margin: 10px auto;
         border: none;
@@ -500,19 +489,18 @@ h2{
         flex-direction: column;
         justify-content: end;
 
-
-        h3{
+        h3 {
           font-size: 2.5rem;
           padding-bottom: 1rem;
         }
 
-        p{
+        p {
           font-size: 1.8rem;
           padding-bottom: 2rem;
         }
 
-        .image{
-          img{
+        .image {
+          img {
             height: auto;
             width: 100%;
           }
@@ -521,39 +509,36 @@ h2{
     }
   }
 
-  #contact{
+  #contact {
     height: 100%;
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 0.1fr 1fr;
 
-    .contact-title{
+    .contact-title {
       width: 100%;
       height: 10vh;
 
-      h2{
+      h2 {
         font-size: 2rem;
       }
     }
 
-    .contact-pages{
+    .contact-pages {
       width: 100%;
       height: 90vh;
       display: grid;
       grid-template-rows: repeat(5, 1fr);
 
-
-      p{
+      p {
         font-size: 1.5rem;
       }
 
-      .social-button{
+      .social-button {
         height: 70px;
         width: 70px;
         font-size: 30px;
       }
     }
   }
-
 }
-
