--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,11 @@
 @font-face {
-  font-family: 'gilroy-bold';
+  font-family: "gilroy-bold";
   src: url("fonts/webfontkit/gilroy-bold-webfont.woff2") format("woff2"), url("fonts/webfontkit/gilroy-bold-webfont.woff") format("woff");
   font-weight: normal;
   font-style: normal; }
 
 @font-face {
-  font-family: 'gilroy-regular';
+  font-family: "gilroy-regular";
   src: url("fonts/webfontkit/gilroy-regular-webfont.woff2") format("woff2"), url("fonts/webfontkit/gilroy-regular-webfont.woff") format("woff");
   font-weight: normal;
   font-style: normal; }
@@ -22,6 +22,11 @@ body {
   font-family: gilroy-regular, sans-serif;
   color: white;
   text-align: center; }
+
+.sticky {
+  position: sticky;
+  position: -webkit-sticky;
+  top: 0; }
 
 p {
   font-size: 4rem;
@@ -70,7 +75,7 @@ h2 {
     height: 100vh;
     display: grid;
     place-items: center;
-    background-color: #4484AB; }
+    background-color: #4484ab; }
   #about .about-pages {
     height: 100vh;
     display: grid;
@@ -91,7 +96,7 @@ h2 {
     height: 100vh;
     display: grid;
     place-items: center;
-    background-color: #DA774A;
+    background-color: #da774a;
     margin: 0 !important; }
   #skills .skills-pages {
     width: 50%; }
@@ -103,9 +108,9 @@ h2 {
         #skills .skills-pages div {
           height: 50vh; } }
       #skills .skills-pages div:nth-child(1) {
-        background-color: #E53855; }
+        background-color: #e53855; }
       #skills .skills-pages div:nth-child(2) {
-        background-color: #7252A4; }
+        background-color: #7252a4; }
 
 #languages {
   height: 400vh;
@@ -118,7 +123,7 @@ h2 {
     height: 100vh;
     display: grid;
     place-items: center;
-    background-color: #7A4865;
+    background-color: #7a4865;
     margin: 0 !important; }
   #languages .languages-pages {
     width: 50%; }
@@ -130,13 +135,13 @@ h2 {
         #languages .languages-pages div {
           height: 50vh; } }
       #languages .languages-pages div:nth-child(1) {
-        background-color: #FE5E33; }
+        background-color: #fe5e33; }
       #languages .languages-pages div:nth-child(2) {
-        background-color: #137D9F; }
+        background-color: #137d9f; }
       #languages .languages-pages div:nth-child(3) {
-        background-color: #849C9B; }
+        background-color: #849c9b; }
       #languages .languages-pages div:nth-child(4) {
-        background-color: #60BEBF; }
+        background-color: #60bebf; }
 
 #projects {
   height: 800vh;
@@ -149,7 +154,7 @@ h2 {
     width: 50%;
     display: grid;
     place-items: center;
-    background-color: #2E39A9;
+    background-color: #2e39a9;
     margin: 0 !important; }
   #projects .projects-pages {
     width: 50%;
@@ -165,9 +170,9 @@ h2 {
         #projects .projects-pages .wrapper {
           height: 50vh; } }
       #projects .projects-pages .wrapper:nth-child(1) {
-        background-color: #9FA3AE; }
+        background-color: #9fa3ae; }
       #projects .projects-pages .wrapper:nth-child(2) {
-        background-color: #BCC9B9; }
+        background-color: #bcc9b9; }
       #projects .projects-pages .wrapper:nth-child(3) {
         background-color: #272734;
         color: white; }
@@ -175,15 +180,15 @@ h2 {
           height: 70rem;
           width: 100%; }
       #projects .projects-pages .wrapper:nth-child(4) {
-        background-color: #89B2BB; }
+        background-color: #89b2bb; }
       #projects .projects-pages .wrapper:nth-child(5) {
         background-color: #d3cdc7; }
       #projects .projects-pages .wrapper:nth-child(6) {
-        background-color: #CDD4DD; }
+        background-color: #cdd4dd; }
       #projects .projects-pages .wrapper:nth-child(7) {
-        background-color: #D4D4D4; }
+        background-color: #d4d4d4; }
       #projects .projects-pages .wrapper:nth-child(8) {
-        background-color: #E8E4F3; }
+        background-color: #e8e4f3; }
       #projects .projects-pages .wrapper .image {
         height: 100%;
         width: 100%;
@@ -214,14 +219,14 @@ h2 {
   #contact .contact-title {
     height: 100vh;
     width: 50%;
-    background-color: #463C74;
+    background-color: #463c74;
     display: grid;
     place-items: center;
     margin: 0 !important; }
   #contact .contact-pages {
     height: 100vh;
     width: 50%;
-    background-color: #26282B;
+    background-color: #26282b;
     display: flex;
     justify-content: space-evenly;
     align-items: center; }
@@ -231,7 +236,7 @@ h2 {
       height: 90px;
       width: 90px;
       border-radius: 50%;
-      background: #26282B;
+      background: #26282b;
       box-shadow: 5px 5px 10px #0f1011, -5px -5px 10px #3d4045;
       transition: all 0.5s ease;
       display: grid;
