--- a/css/main.scss
+++ b/css/main.scss
@@ -266,7 +266,7 @@ h2 {
       }
 
       &:nth-child(6) {
-        background-color: #cdd4dd;
+        background-color: #e0e0e0;
       }
 
       &:nth-child(7) {
