--- a/css/styles.css
+++ b/css/styles.css
@@ -184,7 +184,7 @@ h2 {
       #projects .projects-pages .wrapper:nth-child(5) {
         background-color: #d3cdc7; }
       #projects .projects-pages .wrapper:nth-child(6) {
-        background-color: #cdd4dd; }
+        background-color: #e0e0e0; }
       #projects .projects-pages .wrapper:nth-child(7) {
         background-color: #d4d4d4; }
       #projects .projects-pages .wrapper:nth-child(8) {
