add new projects

--- a/css/main.scss
+++ b/css/main.scss
@@ -240,7 +240,7 @@ h2 {
       }
 
       &:nth-child(1) {
-        background-color: #9fa3ae;
+        background-color: #E4E7EC;
       }
 
       &:nth-child(2) {
@@ -258,11 +258,11 @@ h2 {
       }
 
       &:nth-child(4) {
-        background-color: #89b2bb;
+        background-color: #EFF0F6;
       }
 
       &:nth-child(5) {
-        background-color: #d3cdc7;
+        background-color: #E1D9D5;
       }
 
       &:nth-child(6) {
@@ -270,7 +270,7 @@ h2 {
       }
 
       &:nth-child(7) {
-        background-color: #d4d4d4;
+        background: linear-gradient(180deg, #eebeeb, #FFCEFB);
       }
 
       &:nth-child(8) {
